--- a/soft.E.html
+++ b/soft.E.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <form id="softwareEngineerForm" onsubmit="return validateForm()">
+    <form action="connect.php" id="softwareEngineerForm" onsubmit="return validateForm()">
       <label for="fullName">Full Name:</label>
       <input type="text" id="fullName" name="fullName" required>
 
