--- a/markt_spe.html
+++ b/markt_spe.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <form id="marketingSpecialistForm" onsubmit="return validateForm()">
+    <form action="C:\xampp\htdocs\connect.php" id="marketingSpecialistForm" onsubmit="return validateForm()">
       <label for="fullName">Full Name:</label>
       <input type="text" id="fullName" name="fullName" required>
 
